--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,11 @@ import Splash from '../components/Splash.astro';
   <Splash />
   <section class="main">
     <div class="image-main">
-      <a href="/" class="btn">
+      <a
+        href="https://donorbox.org/elvira-meraz-for-council-district-1-2023?language=es"
+        target="_blank"
+        class="btn"
+      >
         <img src="/donate-button@2x.png" alt="Donate" />
       </a>
       <picture>
@@ -55,7 +59,11 @@ import Splash from '../components/Splash.astro';
           <img src="/logo2.png" alt="Logo2" />
         </picture>
       </div>
-      <a href="/" class="button-btn">
+      <a
+        href="https://donorbox.org/elvira-meraz-for-council-district-1-2023?language=es"
+        target="_blank"
+        class="button-btn"
+      >
         <img src="/donate-button-small@2x.png" alt="Donate" />
       </a>
     </div>
