--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -138,10 +138,11 @@ import Splash from '../components/Splash.astro';
       align-items: center;
       justify-content: center;
       row-gap: 4.77vw;
-      height: 40vh;
+      height: calc(40vh + 1em);
       width: 100vw;
       left: 0;
       bottom: 0;
+      padding-bottom: 3em;
     }
     .bottom img {
       width: 100%;
