--- a/src/components/Splash.astro
+++ b/src/components/Splash.astro
@@ -45,5 +45,10 @@
       visibility: hidden;
     }
   }
+  @media (orientation: portrait) {
+    .splash-screen {
+      padding-bottom: 4em;
+    }
+  }
 </style>
 <script></script>
