--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,39 +16,39 @@ import Splash from '../components/Splash.astro';
       </a>
       <picture>
         <source
-          srcset="/elvira-meraz@4x-100.jpg"
+          srcset="/elvira-meraz2@4x.jpg"
           media="(min-width:1921px) and (orientation:landscape)"
         />
         <source
-          srcset="/elvira-meraz@3x-100.jpg"
+          srcset="/elvira-meraz2@3x.jpg"
           media="(min-width:1600px) and (orientation:landscape)"
         />
         <source
-          srcset="/elvira-meraz@2x-100.jpg"
+          srcset="/elvira-meraz2@2x.jpg"
           media="(min-width:1024px) and (orientation:landscape)"
         />
         <source
-          srcset="/elvira-meraz-small@3x-100.jpg"
+          srcset="/elvira-meraz2-small@3x.jpg"
           media="(min-width:1024px) and (orientation:portrait)"
         />
         <source
-          srcset="/elvira-meraz-small@2x-100.jpg"
+          srcset="/elvira-meraz2-small@3x.jpg"
           media="(min-width:678px) and (orientation:portrait)"
         />
         <!-- <source
-        srcset="/elvira-meraz-small-100.jpg"
+        srcset="/elvira-meraz2-small-100.jpg"
         media="(min-width:678px) and (orientation:portrait"
       /> -->
         <source
-          srcset="/elvira-meraz@2-100.jpg"
+          srcset="/elvira-meraz2@.jpg"
           media="(max-width:768px) and (orientation:ladscape)"
         />
         <source
-          srcset="/elvira-meraz-small-100.jpg"
+          srcset="/elvira-meraz2-small@2x.jpg"
           media="(orientation:portrait)"
         />
-        <source srcset="/elvira-meraz-100.jpg" media="(min-width:768px)" />
-        <img src="/elvira-meraz-100.jpg" alt="Elvira Meraz" />
+        <source srcset="/elvira-meraz2.jpg" media="(min-width:768px)" />
+        <img src="/elvira-meraz2-100.jpg" alt="Elvira Meraz" />
       </picture>
     </div>
     <div class="bottom">
@@ -163,6 +163,7 @@ import Splash from '../components/Splash.astro';
   @media (orientation: portrait) {
     .image-main {
       height: 60vh;
+      /* padding-top: 20px; */
     }
     .image-main img,
     .image-main picture {
